# debug.core

./: .gitlab-ci.yml  Cargo.toml  README.MD
src/: backend.rs  builder.rs  easy_termcolor.rs  field.rs  internal.rs  level.rs  lib.rs  log_msg.rs  util.rs
src/engine/: default.rs  mod.rs  void.rs
src/handler/: file.rs  log_queue.rs  mod.rs  stdout.rs
src/logger/: interface.rs  level.rs  macros.rs  mod.rs
src/profiler/: instant.rs  interface.rs  macros.rs  mod.rs  section.rs
src/trace/: future.rs  interface.rs  macros.rs  mod.rs  span.rs
