[package]
name = "bp3d-logger"
version = "2.0.0-rc.1.0.0"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2021"
description = "A flexible Log implementation intended to be used with BP3D software."
license = "BSD-3-Clause"
repository = "https://github.com/BlockProject3D/debug.logger"
readme = "./README.MD"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bp3d-os = { version = "1.0.0-rc.1.2.1", features=["dirs", "time"] }
crossbeam-channel = "0.5.2"
crossbeam-queue = "0.3.8"
once_cell = "1.10.0"
time = { version = "0.3.0", features = ["formatting", "macros"] }
termcolor = "1.1.3"

[features]
