[package]
name = "bp3d-debug"
version = "1.0.0-rc.3.3.0"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2021"
description = "Tracing subscriber implementations for use with BP3D software. Supports traditional logging through bp3d-logger and supports remote profiling through TCP."
license = "BSD-3-Clause"
repository = "https://github.com/BlockProject3D/debug.core"
readme = "README.MD"
keywords = ["bp3d", "tracing"]
categories = ["development-tools", "development-tools::debugging", "development-tools::profiling"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
